# taskflow-backend

./: .env.example  CLAUDE.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1e48a2ecef49_added_invitation_table.py  2b8ead36b0a0_changed_role_column_to_enum.py  4de4f635997b_add_comments_and_activities_tables.py  554392a943d8_uuid_v7_primary_keys.py  633183604f88_add_is_active_flag_to_users.py  d72a2e731191_add_version_and_priority_to_tasks.py  e9547bca41b4_added_due_date_column_to_tasks_table.py  ecaa95f9ee0c_add_notifications_table.py  fb2ba7d43eab_initial_database_migration.py
app/api/: dependencies.py
app/api/routes/: __init__.py  auth.py  comments.py  invitation.py  notifications.py  stats.py  tasks.py  workspace.py  workspace_tasks.py
app/core/: config.py  database.py  ids.py  security.py
app/crud/: __init__.py  activity.py  comment.py  invitation.py  member.py  notification.py  task.py  user.py  workspace.py
app/models/: __init__.py  activity.py  comment.py  invitation.py  notification.py  task.py  user.py  workspace.py  workspace_member.py
app/schemas/: activity.py  comment.py  invitation.py  notification.py  stats.py  task.py  user.py  workspace.py
app/services/: activity.py  invitation.py  notification.py  stats.py  task.py  workspace.py
app/websocket/: manager.py  routes.py
