[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi[standard]>=0.128.4",
    "passlib[argon2]>=1.7.4",
    "psycopg2>=2.9.11",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
